Can't undo deleting a screen layout #37722

Closed
opened 2013-12-06 23:34:21 +01:00 by David Salvo · 6 comments

System Information
linux mint 15, geforce 9800 gt

Blender Version
Broken: Blender 2.69 r60991
Worked: ???

Short description of error
I accidentally deleted a screen layout while working today with an errant click, and although it shows up on the undo list as an action, no amount of undoing would bring it back. I had to reload a file, lost some work, needless to say was cursing like a sailor for a while ;)

Exact steps for others to reproduce the error

  • Open fresh blender file
  • delete any screen layout
  • attempt to undo... it will not come back.
**System Information** linux mint 15, geforce 9800 gt **Blender Version** Broken: Blender 2.69 r60991 Worked: ??? **Short description of error** I accidentally deleted a screen layout while working today with an errant click, and although it shows up on the undo list as an action, no amount of undoing would bring it back. I had to reload a file, lost some work, needless to say was cursing like a sailor for a while ;) **Exact steps for others to reproduce the error** - Open fresh blender file - delete any screen layout - attempt to undo... it will not come back.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie

This issue was referenced by blender/blender-addons-contrib@9b932c12c8

This issue was referenced by blender/blender-addons-contrib@9b932c12c8ad055a9a139041914e9a5c75de9ba8

This issue was referenced by 9b932c12c8

This issue was referenced by 9b932c12c8ad055a9a139041914e9a5c75de9ba8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 9b932c12c8.

Closed by commit 9b932c12c8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37722
No description provided.